# clarinet

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.mdx  RELEASING.md  WindowsDocker.dockerfile  _clarinet  build.rs  clarinet.code-workspace  clippy.toml  codecov.yml  package-lock.json  package.json  prepare-release.sh  readme2.md  release.sh  test.clar
components/chainhook-db/: Cargo.toml
components/chainhook-db/benches/storage/: redis.rs  rocksdb.rs
components/chainhook-db/src/: main.rs
components/chainhook-db/src/block/: digestion.rs  ingestion.rs
components/chainhook-db/src/cli/: mod.rs
components/chainhook-db/src/config/: mod.rs
components/chainhook-event-observer/: Cargo.toml  Observer.toml
components/chainhook-event-observer/doc/: openapi.json
components/chainhook-event-observer/src/: lib.rs  main.rs
components/chainhook-event-observer/src/chainhooks/: mod.rs  types.rs
components/chainhook-event-observer/src/indexer/: mod.rs
components/chainhook-event-observer/src/observer/: mod.rs
components/chainhook-event-observer/src/utils/: mod.rs
components/chainhook-node/: Cargo.toml  Chainhook.toml  README.md
components/chainhook-node/benches/codec/: clarity.rs  hex.rs
components/chainhook-node/examples/arkadiko-data-indexing/: README.md
components/chainhook-node/src/: lib.rs  main.rs
components/chainhook-node/src/archive/: mod.rs
components/chainhook-node/src/block/: digestion.rs  ingestion.rs  mod.rs
components/chainhook-node/src/cli/: mod.rs
components/chainhook-node/src/config/: file.rs  mod.rs
components/chainhook-sdk/: Cargo.toml  README.md
components/chainhook-sdk/src/: lib.rs  monitoring.rs
components/chainhook-sdk/src/chainhooks/: mod.rs  types.rs
components/chainhook-types-rs/: Cargo.toml
components/chainhook-types-rs/src/: bitcoin.rs  contract_interface.rs  events.rs  lib.rs  ordinals.rs  processors.rs  rosetta.rs  signers.rs
components/clarinet-cli/: Cargo.toml  build.rs
components/clarinet-cli/completions/: _clarinet.ps1
components/clarinet-cli/examples/: package-lock.json  package.json
components/clarinet-cli/js/: 90_deno_ns.js  99_main.js
components/clarinet-cli/src/: bin.rs  lib.rs  macros.rs
components/clarinet-cli/tests/: cli.rs  console.rs  mxs_project.rs
components/clarinet-cli/wix/: main.wxs
components/clarinet-deno/: Cargo.toml  build.rs  clarityTypes.test.ts  clarityTypes.ts  deps.test.ts  eventTypes.ts  index.test.ts  index.ts  types.ts
components/clarinet-deno/ext/: stacksjs-helper-generator.ts
components/clarinet-deployments/: Cargo.toml
components/clarinet-deployments/src/: deployment_plan_test.rs  diagnostic_digest.rs  lib.rs  requirements.rs  types.rs
components/clarinet-deployments/tests/: deployment_plan.rs  genesis_accounts_funding.rs
components/clarinet-files/: Cargo.toml
components/clarinet-files/schemas/: clarinet-manifest.schema.json
components/clarinet-files/src/: clarinetrc.rs  devnet_diff.rs  lib.rs  network_manifest.rs  project_manifest.rs  schema.rs  wasm_fs_accessor.rs
components/clarinet-format/: Cargo.toml  README.md
components/clarinet-format/benches/: formatter.rs
components/clarinet-format/src/: lib.rs
components/clarinet-format/tests/: golden.rs
components/clarinet-sdk-wasm/: .gitignore  Cargo.toml  README.md  build.mjs
components/clarinet-sdk-wasm/src/: core.rs  lib.rs  test_wasm.rs  ts_types.rs
components/clarinet-utils/: Cargo.toml
components/clarinet-utils/src/: lib.rs  macros.rs  transactions.rs
components/clarity-analysis/: Cargo.toml
components/clarity-analysis/src/: ast_dependency_detector.rs  call_checker.rs  coverage_tests.rs  lib.rs
components/clarity-events/: Cargo.toml  test.clar
components/clarity-events/src/: bin.rs  lib.rs
components/clarity-fmt/: Cargo.toml
components/clarity-fmt/src/: bin.rs  lib.rs
components/clarity-format/: Cargo.toml
components/clarity-jupyter-kernel/: Cargo.toml  README.md
components/clarity-jupyter-kernel/src/: main.rs
components/clarity-lsp/: Cargo.toml
components/clarity-lsp/src/: lib.rs  state.rs  utils.rs  vscode.rs  vscode_bridge.rs
components/clarity-repl/: CHANGELOG.md  Cargo.toml  README.md
components/clarity-repl/benches/: simnet.rs
components/clarity-repl/docs/: index.html
components/clarity-repl/js/: index.js  index.mjs  package-lock.json  package.json  vite.config.node.js  vite.config.web.js
components/clarity-repl/src/: bin.rs  lib.rs  macros.rs  test_fixtures.rs  uprint.rs  utils.rs
components/clarity-repl/tests/: boot_contracts.rs  empty_session.rs  empty_session_with_mxs.rs  override_boot_contracts.rs  remote_data.rs  session_with_remote_data.rs
components/hiro-system-kit/: Cargo.toml
components/hiro-system-kit/src/: lib.rs  macros.rs  tokio_helpers.rs
components/jupyter/: Cargo.toml  README.md
components/jupyter/src/: main.rs
components/stacks-codec/: Cargo.toml
components/stacks-codec/src/: codec.rs  lib.rs  macros.rs  pox.rs
components/stacks-devnet-js/: Cargo.toml  README.md  package-lock.json  package.json
components/stacks-devnet-js/lib/: index.ts  test.ts
components/stacks-devnet-js/src/: lib.rs
components/stacks-network/: Cargo.toml
components/stacks-network/src/: cache_extractor.rs  chainhooks.rs  chains_coordinator.rs  command.rs  event.rs  lib.rs  log.rs  main.rs  orchestrator.rs  snapshot_extractor.rs  utils.rs
components/stacks-rpc-client/: Cargo.toml
components/stacks-rpc-client/src/: crypto.rs  lib.rs  mock_stacks_rpc.rs  rpc_client.rs
components/ts-to-clar/: Cargo.toml  README.md  roadmap.md  spec.md
components/ts-to-clar/src/: bin.rs  clarity_std.rs  converter.rs  expression_converter.rs  helper.rs  lib.rs  parser.rs  types.rs
components/ts-to-clar/tests/: counter.rs
node-bindings/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
node-bindings/lib/: index.js  index.ts  test.js  test.ts  types.ts
node-bindings/native/: Cargo.toml
node-bindings/src/: lib.rs
node-bindings/src/serde/: errors.rs  ser.rs
(+1107 files in other folders)
