[workspace]
resolver = "2"
members = [
    "components/clarinet-cli",
    "components/clarinet-deployments",
    "components/clarinet-files",
    "components/clarinet-format",
    "components/clarinet-utils",
    "components/clarinet-sdk-wasm",
    "components/clarity-lsp",
    "components/clarity-repl",
    "components/clarity-events",
    "components/hiro-system-kit",
    "components/stacks-codec",
    "components/stacks-devnet-js",
    "components/stacks-network",
    "components/stacks-rpc-client",
]
default-members = ["components/clarinet-cli"]

[workspace.package]
version = "2.15.0"

[workspace.dependencies]
clarity = { git = "https://github.com/stacks-network/stacks-core.git", branch="feat/clarity-wasm-develop", package = "clarity", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
colored = { version = "3" }
wasm-bindgen = { version = "=0.2.100" }
wasm-bindgen-futures = { version = "=0.4.50" }
web-sys = { version = "=0.3.77" }

[patch.crates-io]
chainhook-sdk = { git = "https://github.com/hirosystems/chainhook.git" }
chainhook-types = { git = "https://github.com/hirosystems/chainhook.git" }
stacks-codec = { path = "./components/stacks-codec" }
hiro-system-kit = { path = "./components/hiro-system-kit" }

# [patch.'https://github.com/stacks-network/stacks-core.git']
# clarity = { path = "../stacks-core/clarity" }
# stacks-common = { path = "../stacks-core/stacks-common" }
# stackslib = { path = "../stacks-core/stackslib" }
