[workspace]
resolver = "2"
members = [
    "components/clarinet-cli",
    "components/clarinet-deployments",
    "components/clarinet-files",
    "components/clarinet-format",
    "components/clarinet-utils",
    "components/clarinet-sdk-wasm",
    "components/clarity-lsp",
    "components/clarity-repl",
    "components/clarity-events",
    "components/hiro-system-kit",
    "components/stacks-codec",
    "components/stacks-devnet-js",
    "components/stacks-network",
    "components/stacks-rpc-client",
]
default-members = ["components/clarinet-cli"]

[workspace.package]
version = "3.3.0"

[workspace.dependencies]
clarity = { git = "https://github.com/stacks-network/stacks-core.git", branch="feat/clarity-wasm-develop", package = "clarity", default-features = false }
stacks-common = { git = "https://github.com/stacks-network/stacks-core.git", branch="feat/clarity-wasm-develop", package = "stacks-common", default-features = false }
stackslib = { git = "https://github.com/stacks-network/stacks-core.git", branch="feat/clarity-wasm-develop", package = "stackslib", default-features = false }
pox-locking = { git = "https://github.com/stacks-network/stacks-core.git", branch="feat/clarity-wasm-develop", package = "pox-locking", default-features = false }

colored = { version = "3" }
crossterm = { version = "0.28" }
pretty_assertions = "1.4"
rand = "0.8.5"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "rustls-tls",
] }
strum = { version = "0.27.1" }
toml = { version = "0.5.6", features = ["preserve_order"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
wasm-bindgen = { version = "=0.2.100" }
wasm-bindgen-futures = { version = "=0.4.50" }
web-sys = { version = "=0.3.77" }
indoc = "2.0.3"

[patch.crates-io]
chainhook-sdk = { git = "https://github.com/hirosystems/chainhook.git", branch = "develop" }
chainhook-types = { git = "https://github.com/hirosystems/chainhook.git", branch = "develop" }
stacks-codec = { path = "./components/stacks-codec" }
hiro-system-kit = { path = "./components/hiro-system-kit" }

# [patch.'https://github.com/stacks-network/stacks-core.git']
# clarity = { path = "../stacks-core/clarity" }
# stacks-common = { path = "../stacks-core/stacks-common" }
# stackslib = { path = "../stacks-core/stackslib" }
# pox-locking = { path = "../stacks-core/pox-locking" }
