[package]
name = "stacks-devnet-js"
version = "0.26.1"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
error-chain = "0.12"

[dependencies.clarinet_lib]
package = "clarinet"
path = "../"
default-features = false

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-4", "channel-api", "event-queue-api", "try-catch-api"]

[dependencies.num]
version = "0.2"
default-features = false