[package]
name = "stacks-devnet-js"
version = "0.30.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
error-chain = "0.12"
orchestra_types = { package = "orchestra-types", path = "../vendor/orchestra-types" }

[dependencies.clarinet_lib]
package = "clarinet"
path = "../"
default-features = false

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-4", "channel-api", "event-queue-api", "try-catch-api"]

[dependencies.num]
version = "0.2"
default-features = false