[package]
name = "chainhook-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
num_cpus = "1.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
redis = "0.21.5"
serde-redis = "0.12.0"
chainhook_event_observer = { package = "chainhook-event-observer", default-features = false, path = "../chainhook-event-observer" }
chainhook_types = { package = "chainhook-types", path = "../chainhook-types-rs" }
clap = { version = "3.2.8", features = ["derive"], optional = true }
clap_generate = { version = "3.0.3", optional = true }
toml = { version = "0.5.6", features = ["preserve_order"], optional = true  }
ctrlc = { version = "3.2.2", optional = true }
slog = { version = "2.7.0" }
slog-json = { version = "2.6.1", optional = true }
slog-scope = { version = "4.4.0", optional = true } 
slog-term = "2.9.0"
slog-async = "2.7.0"
slog-atomic = "3.1.0"

[dev-dependencies]
criterion = "0.3"
redis = "0.21.5"
clarity_repl = { package = "clarity-repl", path = "../../components/clarity-repl" }
hex = "0.4.3"

[lib]
name = "chainhook_db"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["clap", "clap_generate", "toml", "ctrlc", "slog-json", "slog-scope"]
