[package]
name = "chainhook-event-observer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = { version = "1", features = ["arbitrary_precision"]}
serde_derive = "1"
stacks_rpc_client = { package = "stacks-rpc-client", path = "../../components/stacks-rpc-client" }
clarinet_utils = { package = "clarinet-utils", path = "../../components/clarinet-utils" }
clarity_repl = { package = "clarity-repl", path = "../../components/clarity-repl" }
hiro_system_kit = { package = "hiro-system-kit", path = "../../components/hiro-system-kit" }

chainhook_types = { package = "chainhook-types", path = "../chainhook-types-rs" }
rocket = { version = "=0.5.0-rc.2", features = ["json"] }
bitcoincore-rpc = "0.16.0"
bitcoincore-rpc-json = "0.16.0"
base64 = "0.13.0"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
tokio = { version = "=1.17.0", features = ["full"] }
base58 = "0.2.0"
clap = { version = "3.1.6", features = ["derive"], optional = true }
clap_generate = { version = "3.0.3", optional = true }
toml = { version = "0.5.6", features = ["preserve_order"], optional = true }
ctrlc = { version = "3.2.2", optional = true }
schemars = { version = "0.8.10" }
rocket_okapi = "0.8.0-rc.1"

[features]
default = ["cli"]
cli = ["clap", "clap_generate", "toml", "ctrlc", "hiro_system_kit/log"]
