[package]
name = "chainhook-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
num_cpus = "1.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
redis = "0.21.5"
serde-redis = "0.12.0"
chainhook_event_observer = { package = "chainhook-event-observer", default-features = false, path = "../chainhook-event-observer" }
chainhook_types = { package = "chainhook-types", path = "../chainhook-types-rs" }
hiro_system_kit = { package = "hiro-system-kit", path = "../hiro-system-kit" }
clap = { version = "3.2.23", features = ["derive"], optional = true }
clap_generate = { version = "3.0.3", optional = true }
toml = { version = "0.5.6", features = ["preserve_order"], optional = true  }
ctrlc = { version = "3.2.2", optional = true }
reqwest = { version = "0.11", features = ["stream", "json"] }
tokio = { version = "=1.17.0", features = ["full"] }
futures-util = "0.3.24"
flate2 = "1.0.24"
tar = "0.4.38"
flume = "0.10.14"
ansi_term = "0.12.1"
atty = "0.2.14"
bitcoincore-rpc = "0.16.0"
bitcoincore-rpc-json = "0.16.0"

[dev-dependencies]
criterion = "0.3"
redis = "0.21.5"
clarity_repl = { package = "clarity-repl", path = "../../components/clarity-repl" }
hex = "0.4.3"

[features]
default = ["cli"]
cli = ["clap", "clap_generate", "toml", "ctrlc", "hiro_system_kit/log"]
debug = ["hiro_system_kit/debug"]
release = ["hiro_system_kit/release"]