[package]
name = "chainhook-types"
description = "Bitcoin and Stacks data schemas, based on the Rosetta specification"
license = "MIT"
version = "1.3.7"
edition = "2021"

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
strum = { version = "0.27.1", features = ["derive"] }
schemars = { version = "0.8.16", git = "https://github.com/hirosystems/schemars.git", branch = "feat-chainhook-fixes" }
hex = "0.4.3"
