[package]
name = "chainhook-types"
description = "Bitcoin and Stacks data schemas, based on the Rosetta specification"
license = "MIT"
version = "1.3.7"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
strum = { version = "0.27.1", features = ["derive"] }
hex = "0.4.3"
