[package]
name = "clarinet-cli"
version = "2.3.0-rc1"
authors = ["Ludo Galabru <ludo@hiro.so>", "Brice Dobry <brice@hiro.so>"]
edition = "2021"
description = "Clarinet is a simple, modern and opinionated runtime for testing, integrating and deploying Clarity smart contracts."
readme = "README.md"
license = "GPL-3.0"
keywords = ["blockstack", "blockchain", "clarity", "smart-contract", "repl"]
exclude = ["examples/**"]
homepage = "https://github.com/hirosystems/clarinet"
repository = "https://github.com/hirosystems/clarinet"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.8", features = ["derive"], optional = true }
clap_complete = { version = "4.4.4", optional = true }
toml = { version = "0.5.6", features = ["preserve_order"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde_derive = "1"
log = { version = "=0.4.17", features = ["serde"] }
signal-hook-registry = "1.4.0"
secure_tempfile = { version = "3.8.0", package = "tempfile" }
libsecp256k1 = "0.7.0"
hmac = "0.12.0"
pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
futures = "0.3.12"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"], optional = true }
lazy_static = "1.4.0"
atty = "0.2.14"
termcolor = "1.1.2"
regex = "1.7"
dirs = { version = "4.0.0" }
libc = "0.2.86"
encoding_rs = "0.8.31"
percent-encoding = "2.1.0"
pin-project = "1.0.5"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
crossterm = "0.27.0"
ratatui = { version = "0.25.0", default-features = false, features = ["crossterm"] }
base58 = "0.2.0"
ctrlc = "3.1.9"
strum = { version = "0.23.0", features = ["derive"] }
bitcoin = "0.29.2"
tiny-hderive = "0.3.0"
segment = { version = "0.1.2", optional = true }
mac_address = { version = "1.1.2", optional = true }
tower-lsp = { version = "0.19.0", optional = true }
hex = "0.4.3"
serde_yaml = "0.8.23"
num_cpus = "1.13.1"
mio = "0.8"
similar = "2.1.0"
crossbeam-channel = "0.5.6"
chrono = "0.4.31"
sha2 = "0.10.0"

clarity_repl = { package = "clarity-repl", path = "../clarity-repl", features = [
    "cli",
] }
clarinet-files = { path = "../clarinet-files", features = ["cli"] }
clarity-lsp = { path = "../clarity-lsp", features = ["cli"] }
clarinet-deployments = { path = "../clarinet-deployments", features = ["cli"] }
hiro-system-kit = { path = "../hiro-system-kit" }
clarinet-utils = { path = "../clarinet-utils" }
stacks-network = { path = "../stacks-network" }

[target.'cfg(unix)'.dependencies]
nix = "=0.24.2"

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"
winapi = { version = "0.3.9", features = [
    "knownfolders",
    "mswsock",
    "objbase",
    "shlobj",
    "tlhelp32",
    "winbase",
    "winerror",
    "winsock2",
    "std",
    "handleapi",
    "ws2ipdef",
    "ws2tcpip",
] }

[package.metadata.winres]
OriginalFilename = "clarinet.exe"
LegalCopyright = ""
ProductName = "Clarinet"
FileDescription = ""

[lib]
name = "clarinet_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "clarinet"
path = "src/bin.rs"

[features]
default = ["cli", "telemetry"]
cli = ["tokio-util", "clap", "clap_complete", "tower-lsp"]
telemetry = ["segment", "mac_address"]
