[package]
name = "clarinet-cli"
version.workspace = true
edition = "2021"
description = "Clarinet is a simple, modern and opinionated runtime for testing, integrating and deploying Clarity smart contracts."
readme = "README.md"
license = "GPL-3.0"
keywords = ["blockstack", "blockchain", "clarity", "smart-contract", "repl"]
exclude = ["examples/**"]
homepage = "https://github.com/hirosystems/clarinet"
repository = "https://github.com/hirosystems/clarinet"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.8", features = ["derive"], optional = true }
clap_complete = { version = "4.4.4", optional = true }
toml = { version = "0.5.6", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde_derive = "1"
tokio = { version = "1.35.1", features = ["full"] }
lazy_static = { workspace = true }
atty = "0.2.14"
dirs = { version = "4.0.0" }
crossterm = "0.27.0"
ratatui = { version = "0.27.0", default-features = false, features = ["crossterm"] }
segment = { version = "0.2.4", optional = true }
mac_address = { version = "1.1.2", optional = true }
tower-lsp = { version = "0.19.0", optional = true }
similar = "2.1.0"
crossbeam-channel = "0.5.6"

clarinet-core = { path = "../clarinet-core" }
clarity_repl = { package = "clarity-repl", path = "../clarity-repl", features = [
    "cli",
] }
clarinet-files = { path = "../clarinet-files", features = ["cli"] }
clarity-lsp = { path = "../clarity-lsp", features = ["cli"] }
clarinet-deployments = { path = "../clarinet-deployments", features = ["cli"] }
hiro-system-kit = { path = "../hiro-system-kit" }
stacks-network = { path = "../stacks-network" }

[target.'cfg(unix)'.dependencies]
nix = "=0.24.2"

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"
winapi = { version = "0.3.9", features = [
    "knownfolders",
    "mswsock",
    "objbase",
    "shlobj",
    "tlhelp32",
    "winbase",
    "winerror",
    "winsock2",
    "std",
    "handleapi",
    "ws2ipdef",
    "ws2tcpip",
] }

[package.metadata.winres]
OriginalFilename = "clarinet.exe"
LegalCopyright = ""
ProductName = "Clarinet"
FileDescription = ""

[lib]
name = "clarinet_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "clarinet"
path = "src/bin.rs"

[features]
default = ["cli", "telemetry"]
cli = ["clap", "clap_complete", "tower-lsp"]
telemetry = ["segment", "mac_address"]
