[package]
name = "clarinet-cli"
version.workspace = true
edition = "2021"
description = "Clarinet is a simple, modern and opinionated runtime for testing, integrating and deploying Clarity smart contracts."
readme = "README.md"
license = "GPL-3.0"
keywords = ["blockstack", "blockchain", "clarity", "smart-contract", "repl"]
exclude = ["examples/**"]
homepage = "https://github.com/hirosystems/clarinet"
repository = "https://github.com/hirosystems/clarinet"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]

[dependencies]
colored = { workspace = true }
toml = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
tokio = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
similar = "2.1.0"
crossbeam-channel = "0.5.6"

clarity-repl = { package = "clarity-repl", path = "../clarity-repl" }
clarinet-files = { path = "../clarinet-files" }
clarity-lsp = { path = "../clarity-lsp" }
clarinet-format = { path = "../clarinet-format" }
clarinet-deployments = { path = "../clarinet-deployments" }
hiro-system-kit = { path = "../hiro-system-kit" }
stacks-network = { path = "../stacks-network" }
ts-to-clar = { path = "../ts-to-clar" }

[target.'cfg(unix)'.dependencies]
nix = "0.29.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4.8", features = ["derive"] }
clap_complete = { version = "4.4.4" }
tower-lsp-server = { version = "0.22.0" }
segment = { version = "0.2.4", optional = true }
mac_address = { version = "1.1.2", optional = true }

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"
winapi = { version = "0.3.9", features = [
    "knownfolders",
    "mswsock",
    "objbase",
    "shlobj",
    "tlhelp32",
    "winbase",
    "winerror",
    "winsock2",
    "std",
    "handleapi",
    "ws2ipdef",
    "ws2tcpip",
] }

[dev-dependencies]
tempfile = { workspace = true }
indoc = { workspace = true }

[package.metadata.winres]
OriginalFilename = "clarinet.exe"
LegalCopyright = ""
ProductName = "Clarinet"
FileDescription = ""

[lib]
name = "clarinet_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "clarinet"
path = "src/bin.rs"

[features]
default = ["telemetry"]
telemetry = ["segment", "mac_address"]
