[package]
name = "clarinet-deno"
version = "0.33.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde_derive = "1"
deno_emit = { version = "0.4.0", optional = true }
deno_graph = { version = "0.29.0", optional = true }
deno_core =  { version = "0.146.0", optional = true }
deno_ast = { version = "0.17.0", features = ["cjs"], optional = true }
deno_tls = { version = "0.51.0", optional = true }
deno_web = { version = "0.95.0", optional = true }
deno_net = "0.56.0"
deno_url = "0.64.0"
lzzzz = '1.0'
### To eliminate
deno_webidl = { version = "0.64.0" }
deno_http = { version = "0.58.0" }
deno_ffi = { version = "0.51.0" }
deno_console = { version = "0.64.0" }
deno_websocket = { version = "0.69.0" }
deno_webstorage = { version = "0.59.0" }
deno_broadcast_channel = "0.58.0"
hyper = { version = "0.14.18", features = ["server", "stream", "http1", "http2", "runtime"] }
http = "0.2.6"
###
deno_fetch = { version = "0.87.0", optional = true }
deno_crypto = { version = "0.78.0", optional = true }
import_map = { version = "=0.12.1", optional = true }
once_cell = { version = "1.13.0", optional = true }
walkdir =  { version = "=2.3.2", optional = true }
node_resolver = { version = "0.1.1", optional = true }
cache_control = { version = "=0.2.0", optional = true }
notify = "=5.0.0-pre.7"
dlopen = "0.1.8"
dissimilar = "=1.0.3"
log = { version = "=0.4.17", features = ["serde"] }
filetime = "0.2.16"
mitata = '=0.0.7'
env_logger = "=0.9.0"
fs3 = "0.5.0"
typed-arena = "2.0.1"
sys-info = "0.9.1"
zstd = '=0.11.1'
semver-parser = "=0.10.2"
netif = "0.1.3"
dprint-plugin-json = "=0.15.4"
dprint-plugin-markdown = "=0.13.3"
dprint-plugin-typescript = "=0.71.1"
signal-hook-registry = "1.4.0"
text_lines = "=0.6.0"
secure_tempfile = { version = "=3.3.0", package = "tempfile" }
jsonc-parser = { version = "=0.20.0", features = ["serde"] }
twox-hash = "1.6.3"
data-url = "=0.1.1"
os_pipe = "1.0.1"
tokio-util = { version = "0.7.1", features = ["io"], optional = true }
uuid = { version = "=1.0.0", features = ["v4", "serde"] }
futures = "0.3.12"
tokio = { version = "=1.17.0", features = ["full"] }
termcolor = "1.1.2"
encoding_rs = "0.8.31"
indexmap = { version = "1.6.1", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
nix = "=0.24.2"

[build-dependencies]
deno_broadcast_channel = { version = "0.58.0" }
deno_console = { version = "0.64.0" }
deno_core = { version = "0.146.0" }
deno_crypto = { version = "0.78.0" }
deno_fetch = { version = "0.87.0" }
deno_net = { version = "0.56.0" }
deno_url = { version = "0.64.0" }
deno_web = { version = "0.95.0" }
deno_websocket = { version = "0.69.0" }
deno_webstorage = { version = "0.59.0" }
regex = "=1.5.6"
serde = { version = "1.0.136", features = ["derive"] }
zstd = '=0.11.1'

[lib]
name = "clarinet_deno"
path = "src/lib.rs"
