[package]
name = "clarinet-deployments"
version.workspace = true
edition = "2021"

[dependencies]
colored = { workspace = true }
base64 = "0.22.1"
serde = "1"
serde_json = "1.0.123"
serde_derive = "1"
serde_yaml = "0.8.23"
strum = { workspace = true, features = ["derive"] }
rand = "0.8.5"
reqwest = { workspace = true }
clarity = { workspace = true }

clarity-repl = { path = "../clarity-repl", default-features = false }
clarinet-files = { path = "../clarinet-files" }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }
toml = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitcoin = "0.31.2"
bitcoincore-rpc = "0.18.0"
bitcoincore-rpc-json = "0.18.0"
base58 = "0.2.0"
libsecp256k1 = "0.7.0"
clarinet-utils = { path = "../clarinet-utils" }
stacks-codec = { path = "../stacks-codec" }
stacks-rpc-client = { path = "../stacks-rpc-client" }

[lib]
name = "clarinet_deployments"
path = "src/lib.rs"
