[package]
name = "clarinet-files"
version.workspace = true
edition = "2021"
description = "Clarinet manifests files helpers"
license = "GPL-3.0"

[dependencies]
dirs = "6.0"
libsecp256k1 = "0.7.0"
serde = "1"
serde_derive = "1"
serde_json = "1.0.114"
toml = { workspace = true }
url = { version = "2.2.2", features = ["serde"] }

clarity = { workspace = true }
clarinet-utils = { version = "1", path = "../clarinet-utils" }
clarity-repl = { path = "../clarity-repl", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitcoin = { version = "0.31.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3" }
serde-wasm-bindgen = { version = "0.6.4" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console"] }

[lib]
name = "clarinet_files"
path = "src/lib.rs"
