[package]
name = "clarinet-files"
version.workspace = true
edition = "2021"
description = "Clarinet manifests files helpers"
license = "GPL-3.0"

[dependencies]
dirs = "6.0"
libsecp256k1 = "0.7.0"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
url = { version = "2.5.4", features = ["serde"] }

clarity = { workspace = true, default-features = false }
stacks-common = { workspace = true, default-features = false }
clarinet-utils = { version = "1", path = "../clarinet-utils" }
clarity-repl = { path = "../clarity-repl", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitcoin = { version = "0.31.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3" }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console"] }

[lib]
name = "clarinet_files"
path = "src/lib.rs"
