[package]
name = "clarinet-files"
version.workspace = true
edition = "2021"
description = "Clarinet manifests files helpers"
license = "GPL-3.0"

[dependencies]
dirs = { workspace = true }
libsecp256k1 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
url = { version = "2.5.4", features = ["serde"] }
schemars = { workspace = true, optional = true }

clarity = { workspace = true, default-features = false }
stacks-common = { workspace = true, default-features = false }
clarinet-utils = { version = "1", path = "../clarinet-utils" }
clarity-repl = { path = "../clarity-repl", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitcoin = { version = "0.31.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console"] }

[features]
json_schema = ["schemars", "clarity-repl/json_schema"]

[lib]
name = "clarinet_files"
path = "src/lib.rs"
