[package]
name = "clarinet-format"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clarity = { workspace = true, features = ["developer-mode", "devtools", "log"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
clarity = { workspace = true, features = ["wasm", "developer-mode", "devtools"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
divan = "0.1"
indoc = { workspace = true }

[[bench]]
name = "formatter"
harness = false

[lib]
name = "clarinet_format"
path = "src/lib.rs"
crate-type = ["lib"]
