[package]
name = "clarinet-sdk-wasm"
# version.workspace = true
version = "2.13.0-beta14"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/hirosystems/clarinet"
description = "The core lib that powers @hirosystems/clarinet-sdk"

[lib]
crate-type = ["cdylib"]
name = "clarinet_sdk"
path = "src/lib.rs"

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
gloo-utils = { version = "0.2", features = ["serde"] }
js-sys = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.6.4", optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { workspace = true, features = ["console"], optional = true }
colored = "2.1.0"

clarinet-files = { path = "../clarinet-files", default-features = false }
clarity-repl = { path = "../clarity-repl", default-features = false, optional = true }
clarinet-deployments = { path = "../clarinet-deployments", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
clarity = { workspace = true }

[features]
default = ["wasm"]
wasm = [
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "serde-wasm-bindgen",
  "js-sys",
  "web-sys",
  "console_error_panic_hook",
  "clarinet-deployments/wasm",
  "clarity-repl/wasm",
  "clarinet-files/wasm",
]

# DEV
[profile.dev]
inherits = "release"
opt-level = 3
debug = false
debug-assertions = false
incremental = false
codegen-units = 256

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

# RELEASE
[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
lto = true
incremental = false
codegen-units = 16

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

# profiling
[profile.profiling]
debug = 1

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-g', '-O']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
